# app/docs/swagger.yaml
@@ -1,5 +1,49 @@
-basePath: /v1
+basePath: /api/v1
 definitions:
+  domain.ChefFollowsForGet:
+    properties:
+      chef:
+        $ref: '#/definitions/domain.ChefsForGet'
+      chef_id:
+        type: integer
+      id:
+        type: integer
+      user_id:
+        type: integer
+    type: object
+  domain.ChefsForGet:
+    properties:
+      description:
+        type: string
+      display_name:
+        type: string
+      id:
+        type: integer
+      screen_name:
+        type: string
+    type: object
+  domain.RecipeFavoritesForGet:
+    properties:
+      id:
+        type: integer
+      recipe:
+        $ref: '#/definitions/domain.RecipesForGet'
+      recipe_id:
+        type: integer
+      user_id:
+        type: integer
+    type: object
+  domain.RecipesForGet:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      is_draft:
+        type: boolean
+      title:
+        type: string
+    type: object
   domain.Users:
     properties:
       display_name:
@@ -9,23 +53,135 @@ definitions:
       screen_name:
         type: string
     type: object
-externalDocs:
-  description: OpenAPI
-  url: https://swagger.io/resources/open-api/
+  usecase.ResultStatus:
+    properties:
+      code:
+        type: integer
+      error: {}
+    type: object
 host: localhost:8080
 info:
-  contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
-  description: This is a sample server celler server.
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  contact: {}
+  description: This is a Team02's API Docs at Qin.
   termsOfService: http://swagger.io/terms/
-  title: Swagger Example API
+  title: Team02's API
   version: "1.0"
 paths:
+  /chefFollows:
+    get:
+      consumes:
+      - application/x-json-stream
+      description: This API return the list of following chefs by user.
+      parameters:
+      - description: User ID
+        in: query
+        name: user_id
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.ChefFollowsForGet'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/usecase.ResultStatus'
+      summary: Get following chef list.
+      tags:
+      - chefFollows
+  /chefs:
+    get:
+      consumes:
+      - application/x-json-stream
+      description: This API return all chef list.
+      parameters:
+      - description: Query
+        in: query
+        name: q
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.ChefsForGet'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/usecase.ResultStatus'
+      summary: Get chef list.
+      tags:
+      - chef
+  /chefs/{screenName}:
+    get:
+      consumes:
+      - application/x-json-stream
+      description: This API return unique chef by screenName.
+      parameters:
+      - description: screenName
+        in: path
+        name: screenName
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.ChefsForGet'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/usecase.ResultStatus'
+      summary: Get unique chef.
+      tags:
+      - chef
+  /recipeFavorites:
+    get:
+      consumes:
+      - application/x-json-stream
+      description: This API return list of recipes of favorite.
+      parameters:
+      - description: User ID
+        in: query
+        name: user_id
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.RecipeFavoritesForGet'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/usecase.ResultStatus'
+      summary: Get list of recipes of favorite.
+      tags:
+      - recipeFavorites
+  /recipes:
+    get:
+      consumes:
+      - application/x-json-stream
+      description: This API return all recipe list.
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.RecipesForGet'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/usecase.ResultStatus'
+      summary: Get recipe list.
+      tags:
+      - recipes
   /users/{id}:
     get:
       consumes:
@@ -36,11 +192,11 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/domain.Users'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/usecase.ResultStatus'
       summary: product users
       tags:
       - users
-      - product
-securityDefinitions:
-  BasicAuth:
-    type: basic
 swagger: "2.0"
