# app/internal/interface/controllers/product/chefs_controller.go
@@ -20,6 +20,14 @@ func NewChefsController(db gateways.DB) *ChefsController {
 	}
 }
 
+//	@summary		Get chef list.
+//	@description	This API return all chef list.
+//	@tags			chef
+//	@accept			application/x-json-stream
+//	@param			q	query	string	false	"Query"
+//	@Success		200	{array}	domain.ChefsForGet
+//	@Failure 		404 {object} usecase.ResultStatus
+//	@router			/chefs [get]
 func (cc *ChefsController) GetList(ctx controllers.Context) {
 	q := ctx.Query("q")
 
@@ -31,6 +39,14 @@ func (cc *ChefsController) GetList(ctx controllers.Context) {
 	ctx.JSON(res.Code, controllers.NewH("success", chefs))
 }
 
+//	@summary		Get unique chef.
+//	@description	This API return unique chef by screenName.
+//	@tags			chef
+//	@accept			application/x-json-stream
+//  @param			screenName	path	string	false	"screenName"
+//	@Success		200	{array}	domain.ChefsForGet
+//	@Failure 		404 {object} usecase.ResultStatus
+//	@router			/chefs/{screenName} [get]
 func (cc *ChefsController) Get(ctx controllers.Context) {
 	screenName := ctx.Param("screenName")
 
