# app/internal/interface/controllers/product/recipe_favorites_controller.go
@@ -23,6 +23,14 @@ func NewRecipeFavoritesController(db gateways.DB) *RecipeFavoritesController {
 	}
 }
 
+//	@summary		Get list of recipes of favorite.
+//	@description	This API return list of recipes of favorite.
+//	@tags			recipeFavorites
+//	@accept			application/x-json-stream
+//	@param			user_id	query		int	false	"User ID"
+//	@Success		200		{array}		domain.RecipeFavoritesForGet
+//	@Failure		404		{object}	usecase.ResultStatus
+//	@router			/recipeFavorites [get]
 func (rc *RecipeFavoritesController) GetList(ctx controllers.Context) {
 
 	userID, _ := strconv.Atoi(ctx.Query("user_id"))
